<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>72.0.0.1405</version>
  </parent>

  <groupId>org.sonarsource.javascript</groupId>
  <artifactId>javascript</artifactId>
  <version>10.15.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>SonarJS</name>
  <description>SonarQube JavaScript/TypeScript/CSS Analyzer</description>
  <inceptionYear>2011</inceptionYear>
  <organization>
    <name>SonarSource</name>
    <url>https://www.sonarsource.com</url>
  </organization>
  <licenses>
    <license>
      <name>GNU LGPL 3</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>vilchik-elena</id>
      <name>Elena Vilchik</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>saberduck</id>
      <name>Tibor Blénessy</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>yassin-kammoun-sonarsource</id>
      <name>Yassin Kammoun</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>ilia-kebets-sonarsource</id>
      <name>Ilia Kebets</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>vdiez</id>
      <name>Victor Diez</name>
      <organization>SonarSource</organization>
    </developer>
  </developers>

  <modules>
    <module>sonar-plugin</module>
    <module>tools</module>
    <!--
      its module is added via profile below
    -->
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/sonar-javascript.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/sonar-javascript.git</developerConnection>
    <url>https://github.com/SonarSource/sonar-javascript</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <url>https://github.com/SonarSource/sonar-javascript/issues</url>
  </issueManagement>

  <properties>
    <!--  this is necessary because of drop of modules  -->
    <sonar.testExecutionReportPaths>test-report.xml</sonar.testExecutionReportPaths>

    <gitRepositoryName>SonarJS</gitRepositoryName>
    <license.title>SonarQube JavaScript Plugin</license.title>
    <!-- Version corresponds to SQ 9.9 LTS -->
    <pluginApiMinVersion>9.14.0.375</pluginApiMinVersion>

    <assertj.version>3.16.1</assertj.version>
    <jgit.version>6.2.0.202206071550-r</jgit.version>
    <junit.version>5.9.3</junit.version>
    <mockito.version>3.5.0</mockito.version>
    <slf4j.version>1.7.36</slf4j.version>
    <sonar.version>10.4.1.88267</sonar.version>
    <sonar.api.version>10.7.0.2191</sonar.api.version>
    <sonar-orchestrator.version>4.9.0.1920</sonar-orchestrator.version>
    <gson.version>2.11.0</gson.version>
    <analyzer-commons.version>2.7.0.1482</analyzer-commons.version>
    <sslr.version>1.22</sslr.version>
    <sonarlint.plugin.api.version>9.1.1.74346</sonarlint.plugin.api.version>

    <artifactsToPublish>${project.groupId}:sonar-javascript-plugin:jar</artifactsToPublish>
    <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
    <maven.compiler.release>17</maven.compiler.release>
    <jdk.min.version>17</jdk.min.version>
    <version.surefire.plugin>3.1.2</version.surefire.plugin>

    <!-- FIXME fix javadoc errors -->
    <doclint>none</doclint>

    <!-- sonar analysis -->
    <sonar.sources>packages/</sonar.sources>
    <sonar.exclusions>packages/**/*.test.ts,packages/**/*.fixture.*,packages/**/fixtures/**/*</sonar.exclusions>
    <sonar.tests>packages/</sonar.tests>
    <sonar.test.inclusions>packages/**/*.test.ts</sonar.test.inclusions>
    <sonar.javascript.lcov.reportPaths>coverage/lcov.info</sonar.javascript.lcov.reportPaths>
    <sonar.typescript.tsconfigPath>${project.basedir}/packages/tsconfig.app.json,${project.basedir}/packages/tsconfig.test.json</sonar.typescript.tsconfigPath>
    <sonar.cpd.exclusions>sonar-plugin/javascript-checks/src/main/resources/**/*.html</sonar.cpd.exclusions>
    <sonar.coverage.exclusions>packages/bridge/src/worker.js,packages/ruling/**</sonar.coverage.exclusions>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- Default dependencies (compile) -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>bridge</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>javascript-checks</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>css</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-commons</artifactId>
        <version>${analyzer-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>1.3.9</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.26.0</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.11.0</version>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.6</version>
      </dependency>
      <dependency>
          <groupId>org.sonarsource.sslr</groupId>
          <artifactId>sslr-core</artifactId>
          <version>${sslr.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarlint.core</groupId>
        <artifactId>sonarlint-plugin-api</artifactId>
        <version>${sonarlint.plugin.api.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.tukaani</groupId>
        <artifactId>xz</artifactId>
        <version>1.9</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jgit</groupId>
        <artifactId>org.eclipse.jgit</artifactId>
        <version>${jgit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarlint.core</groupId>
        <artifactId>sonarlint-core</artifactId>
        <version>${sonarlint.plugin.api.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.orchestrator</groupId>
        <artifactId>sonar-orchestrator-junit5</artifactId>
        <version>${sonar-orchestrator.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-ws</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>4.0.3</version>
        <scope>test</scope>
      </dependency>

      <!-- Provided dependencies -->
      <dependency>
        <groupId>org.sonarsource.api.plugin</groupId>
        <artifactId>sonar-plugin-api</artifactId>
        <version>${sonar.api.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-plugin-api-impl</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.javascript</groupId>
        <artifactId>sonar-javascript-plugin</artifactId>
        <type>sonar-plugin</type>
        <version>${project.version}</version>
        <scope>provided</scope>
      </dependency>


      <dependency>
        <groupId>org.sonarsource.api.plugin</groupId>
        <artifactId>sonar-plugin-api-test-fixtures</artifactId>
        <version>${sonar.api.version}</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <!-- This plugin is already configured in parent pom, however we want a configuration specific to this project -->
        <configuration>
          <includes>
            <include>packages/**/*.ts</include>
            <include>packages/**/*.tsx</include>
            <include>profiling/**/*.ts</include>
            <include>profiling/**/*.js</include>
            <include>tools/resources/rule.*</include>
            <include>tools/**/*.mjs</include>
            <include>tools/**/*.ts</include>
            <include>tools/**/*.java</include>
          </includes>
          <mapping>
            <template_java>JAVADOC_STYLE</template_java>
            <template_ts>JAVADOC_STYLE</template_ts>
          </mapping>
          <excludes>
            <exclude>packages/**/fixtures/**/*</exclude>
            <exclude>packages/**/*.fixture.*</exclude>
            <exclude>**/src/test/resources/**/*</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>its</id>
      <modules>
        <module>its</module>
      </modules>
    </profile>
  </profiles>

</project>
